[project]
name = "hyperate-overlay"
version = "1.2.0"
description = "Hyperate 三值置顶悬浮窗 - 实时显示当前/最高/最低心率的透明悬浮窗应用"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.5",
    "websockets>=15.0.1",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[dependency-groups]
plots = [
    "matplotlib>=3.6.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# 对于扁平布局（flat layout），使用py-modules而不是packages
[tool.setuptools]
py-modules = ["main", "config", "ui", "websocket_client", "stats_analyzer"]

# 或者使用动态发现
# packages = find:

[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi"]

[project.scripts]
hyperate-overlay = "main:main"
